# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: camera.hpp  filesystem.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  vertex.hpp
include/glad/: glad.h
include/scene/: mainscene.hpp  scene.hpp
resources/objects/: cubes_resources.hpp
shaders/fragment/: cube.frag  triangle.frag
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/scene/: mainscene.cpp
